--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "@popperjs/core": "^2.11.6",
     "@reduxjs/toolkit": "^1.8.3",
     "@types/is-number": "^7.0.3",
-    "chums-components": "github:UtahGooner/chums-components",
-    "chums-types": "github:UtahGooner/chums-types",
+    "chums-components": "github:ChumsInc/chums-components",
+    "chums-types": "github:ChumsInc/chums-types",
     "classnames": "^2.2.6",
     "decimal.js": "^10.4.3",
     "is-number": "^7.0.0",
