--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.7",
     "@babel/register": "^7.12.1",
+    "@eslint/js": "^9.10.0",
     "@types/base16": "^1.0.2",
     "@types/numeral": "^2.0.2",
     "@types/react": "^18.0.14",
@@ -53,18 +54,22 @@
     "bootstrap-icons": "^1.8.3",
     "clean-webpack-plugin": "^4.0.0",
     "core-js": "^3.8.0",
-    "css-loader": "^6.7.1",
+    "css-loader": "^7.1.2",
     "dotenv-webpack": "^8.0.1",
+    "eslint": "^9.10.0",
+    "eslint-plugin-react": "^7.36.1",
+    "globals": "^15.9.0",
     "path": "^0.12.7",
-    "style-loader": "^3.3.1",
+    "style-loader": "^4.0.0",
     "ts-loader": "^9.3.0",
+    "typescript-eslint": "^8.5.0",
     "webpack": "^5.73.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-chunk-hash": "^0.6.0",
     "webpack-cli": "^5.1.1",
     "webpack-dev-server": "^5.0.4",
     "webpack-manifest-plugin": "^5.0.0",
-    "webpack-merge": "^5.8.0"
+    "webpack-merge": "^6.0.1"
   },
   "auto-changelog": {
     "template": "keepachangelog",
