--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "is-number": "^7.0.0",
     "numeral": "^2.0.6",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.6",
     "react-dom": "^18.2.0",
     "react-popper": "^2.3.0",
     "react-redux": "^9.1.0",
-    "react-router-dom": "^6.4.3",
+    "react-router": "^7.0.2",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0"
   },
@@ -42,7 +43,7 @@
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.7",
     "@babel/register": "^7.12.1",
-    "@eslint/js": "^9.10.0",
+    "@eslint/js": "^9.16.0",
     "@types/base16": "^1.0.2",
     "@types/numeral": "^2.0.2",
     "@types/react": "^18.0.14",
@@ -56,13 +57,13 @@
     "core-js": "^3.8.0",
     "css-loader": "^7.1.2",
     "dotenv-webpack": "^8.0.1",
-    "eslint": "^9.10.0",
-    "eslint-plugin-react": "^7.36.1",
-    "globals": "^15.9.0",
+    "eslint": "^9.16.0",
+    "eslint-plugin-react": "^7.37.2",
+    "globals": "^15.13.0",
     "path": "^0.12.7",
     "style-loader": "^4.0.0",
     "ts-loader": "^9.3.0",
-    "typescript-eslint": "^8.5.0",
+    "typescript-eslint": "^8.18.0",
     "webpack": "^5.73.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-chunk-hash": "^0.6.0",
