--- a/package.json
+++ b/package.json
@@ -6,33 +6,35 @@
   "author": "Steve Montgomery",
   "license": "ISC",
   "scripts": {
-    "start": "webpack serve --config webpack.dev.js --progress",
-    "build": "webpack --config webpack.prod.js --progress --env production",
+    "dev": "vite",
+    "start": "webpack serve --config webpack.dev.mjs --progress",
+    "build": "webpack --config webpack.prod.mjs --progress --env production",
     "version": "auto-changelog -p && git add CHANGELOG.md"
   },
   "dependencies": {
+    "@chumsinc/alert-list": "^2.1.0",
     "@chumsinc/gtin-tools": "^1.0.3",
+    "@chumsinc/react-bootstrap-addons": "^2.0.2",
+    "@chumsinc/sortable-tables": "^2.0.8",
+    "@chumsinc/ui-utils": "^2.0.4",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@mui/icons-material": "^5.10.9",
-    "@mui/material": "^5.10.13",
-    "@popperjs/core": "^2.11.6",
-    "@reduxjs/toolkit": "^2.2.2",
-    "@types/is-number": "^7.0.3",
-    "chums-components": "github:ChumsInc/chums-components",
+    "@floating-ui/react-dom": "^2.1.2",
+    "@mui/icons-material": "^7.0.2",
+    "@mui/material": "^7.0.2",
+    "@reduxjs/toolkit": "^2.7.0",
     "chums-types": "github:ChumsInc/chums-types",
     "classnames": "^2.2.6",
     "decimal.js": "^10.4.3",
     "is-number": "^7.0.0",
     "numeral": "^2.0.6",
-    "react": "^18.2.0",
+    "react": "^19.1.0",
     "react-bootstrap": "^2.10.6",
-    "react-dom": "^18.2.0",
-    "react-popper": "^2.3.0",
+    "react-dom": "^19.1.0",
     "react-redux": "^9.1.0",
     "react-router": "^7.0.2",
     "redux": "^5.0.1",
-    "redux-thunk": "^3.1.0"
+    "usehooks-ts": "^3.1.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.8",
@@ -44,30 +46,30 @@
     "@babel/preset-react": "^7.12.7",
     "@babel/register": "^7.12.1",
     "@eslint/js": "^9.16.0",
-    "@types/base16": "^1.0.2",
+    "@types/is-number": "^7.0.5",
     "@types/numeral": "^2.0.2",
-    "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.5",
-    "@types/styled-components": "^5.1.25",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
+    "@vitejs/plugin-react": "^4.4.1",
     "auto-changelog": "^2.4.0",
-    "babel-loader": "^9.1.2",
+    "babel-loader": "^10.0.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.3",
-    "clean-webpack-plugin": "^4.0.0",
     "core-js": "^3.8.0",
     "css-loader": "^7.1.2",
     "dotenv-webpack": "^8.0.1",
     "eslint": "^9.16.0",
     "eslint-plugin-react": "^7.37.2",
-    "globals": "^15.13.0",
+    "globals": "^16.0.0",
     "path": "^0.12.7",
     "style-loader": "^4.0.0",
     "ts-loader": "^9.3.0",
     "typescript-eslint": "^8.18.0",
+    "vite": "^6.3.3",
     "webpack": "^5.73.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-chunk-hash": "^0.6.0",
-    "webpack-cli": "^5.1.1",
+    "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.0.4",
     "webpack-manifest-plugin": "^5.0.0",
     "webpack-merge": "^6.0.1"
