--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   "license": "ISC",
   "scripts": {
     "dev": "vite",
-    "start": "webpack serve --config webpack.dev.mjs --progress",
-    "build": "webpack --config webpack.prod.mjs --progress --env production",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview",
     "version": "auto-changelog -p && git add CHANGELOG.md"
   },
   "dependencies": {
@@ -37,42 +38,22 @@
     "usehooks-ts": "^3.1.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.12.8",
-    "@babel/core": "^7.12.9",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/plugin-transform-async-to-generator": "^7.12.1",
-    "@babel/plugin-transform-regenerator": "^7.12.1",
-    "@babel/preset-env": "^7.12.7",
-    "@babel/preset-react": "^7.12.7",
-    "@babel/register": "^7.12.1",
     "@eslint/js": "^9.16.0",
     "@types/is-number": "^7.0.5",
+    "@types/node": "^24.2.1",
     "@types/numeral": "^2.0.2",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
-    "@vitejs/plugin-react": "^4.4.1",
+    "@vitejs/plugin-react": "^5.0.0",
     "auto-changelog": "^2.4.0",
-    "babel-loader": "^10.0.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.3",
-    "core-js": "^3.8.0",
-    "css-loader": "^7.1.2",
-    "dotenv-webpack": "^8.0.1",
     "eslint": "^9.16.0",
-    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.0.0",
-    "path": "^0.12.7",
-    "style-loader": "^4.0.0",
-    "ts-loader": "^9.3.0",
     "typescript-eslint": "^8.18.0",
-    "vite": "^6.3.3",
-    "webpack": "^5.73.0",
-    "webpack-bundle-analyzer": "^4.5.0",
-    "webpack-chunk-hash": "^0.6.0",
-    "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.0.4",
-    "webpack-manifest-plugin": "^5.0.0",
-    "webpack-merge": "^6.0.1"
+    "vite": "^7.1.2"
   },
   "auto-changelog": {
     "template": "keepachangelog",
